--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,3 +1,7 @@
 {
-  "alwaysUpdateLinks": true
+  "alwaysUpdateLinks": true,
+  "showLineNumber": true,
+  "vimMode": true,
+  "newLinkFormat": "relative",
+  "useMarkdownLinks": true
 }
